# 3AAudioAlgorithm

./: LICENSE  README.md  pyproject.toml
cpp_achieve/: CMakeLists.txt  README.md
cpp_achieve/include/audio3a/: audio_types.h  modules.h  pipeline.h  pipeline_c.h
cpp_achieve/src/: pipeline_c.cpp  pipeline_stub.cpp
docs/: cplusplus_migration.md
examples/: export_golden_vectors.py  run_pipeline.py
src/audio3a/: __init__.py  aec.py  agc.py  ans.py  drc.py  interfaces.py  io.py  pipeline.py  runner.py  types.py
tests/: test_docs.py  test_golden_vectors.py  test_pipeline.py
